Add configuration feature for popup frequency adjustment

--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,10 @@
     <div id="compliment-container">
         <p id="compliment-text">Fetching compliment...</p>
     </div>
+    <div id="config-ui" style="display: none;">
+        <input type="number" id="frequency-input" min="1" max="240" placeholder="Frequency (min)">
+        <button id="frequency-submit">Update Frequency</button>
+    </div>
     <script src="popup.js"></script>
 </body>
 </html>
