--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,8 @@
             text-align: center;
             padding: 10px;
             border-radius: 10px;
-            background-color: #ffffff;
+            background-color: rgba(255, 255, 255, 0.3);
+            backdrop-filter: blur(2px);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
     </style>
