--- a/popup.html
+++ b/popup.html
@@ -23,6 +23,7 @@
             background-color: rgba(255, 255, 255, 0.3);
             backdrop-filter: blur(2px);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            color: lightgrey; /* Changed text color to light grey */
         }
     </style>
 </head>
