Overriding Devin for the styling

--- a/popup.html
+++ b/popup.html
@@ -23,10 +23,10 @@
             background-color: rgba(255, 255, 255, 0.3);
             backdrop-filter: blur(2px);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            color: black; /* Default text color for compliment */
+            color: black;
         }
-        .placeholder {
-            color: lightgrey; /* Placeholder text color */
+        #compliment.placeholder {
+            display: none;
         }
     </style>
 </head>
